# my_modern_cpp_lesson-

./: .gitignore  README.md  lesson1.cpp  lesson2.cpp  lesson3.cpp  lesson6.py  test
install/: local_setup.sh  setup.sh
install/lesson5_composition/share/lesson5_composition/: package.bash  package.zsh
lesson4/ros2_comm_demo/: .gitignore  readme.md
lesson4/ros2_comm_demo/install/: local_setup.sh  setup.sh
lesson4/ros2_comm_demo/install/robot_interfaces/share/robot_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.xml
lesson4/ros2_comm_demo/install/robot_interfaces/share/robot_interfaces/action/: Navigation.action  Navigation.idl
lesson4/ros2_comm_demo/install/robot_interfaces/share/robot_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  (+7 more)
lesson4/ros2_comm_demo/install/ros2_comm_demo/share/ros2_comm_demo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml
lesson4/ros2_comm_demo/log/: latest_build
lesson4/ros2_comm_demo/src/robot_interfaces/: CMakeLists.txt
lesson4/ros2_comm_demo/src/robot_interfaces/action/: Navigation.action
lesson4/ros2_comm_demo/src/robot_interfaces/srv/: GetRobotStatus.srv
lesson4/ros2_comm_demo/src/ros2_comm_demo/: CMakeLists.txt  package.xml
lesson4/ros2_comm_demo/src/ros2_comm_demo/install/: local_setup.sh  setup.sh
lesson4/ros2_comm_demo/src/ros2_comm_demo/install/robot_interfaces/include/robot_interfaces/robot_interfaces/action/detail/: navigation__builder.hpp  navigation__functions.c  navigation__struct.h  navigation__struct.hpp  navigation__traits.hpp  navigation__type_support.c  navigation__type_support.cpp
lesson4/ros2_comm_demo/src/ros2_comm_demo/install/robot_interfaces/include/robot_interfaces/robot_interfaces/srv/: get_robot_status.h  get_robot_status.hpp
lesson4/ros2_comm_demo/src/ros2_comm_demo/install/robot_interfaces/include/robot_interfaces/robot_interfaces/srv/detail/: get_robot_status__builder.hpp  get_robot_status__functions.c  get_robot_status__functions.h  get_robot_status__rosidl_typesupport_fastrtps_c.h  get_robot_status__rosidl_typesupport_fastrtps_cpp.hpp  get_robot_status__rosidl_typesupport_introspection_c.h  get_robot_status__rosidl_typesupport_introspection_cpp.hpp  get_robot_status__struct.h  get_robot_status__struct.hpp  get_robot_status__traits.hpp  get_robot_status__type_support.c  get_robot_status__type_support.cpp  get_robot_status__type_support.h  get_robot_status__type_support.hpp
lesson4/ros2_comm_demo/src/ros2_comm_demo/install/robot_interfaces/local/lib/python3.10/dist-packages/robot_interfaces/: _robot_interfaces_s.ep.rosidl_typesupport_c.c  _robot_interfaces_s.ep.rosidl_typesupport_fastrtps_c.c  _robot_interfaces_s.ep.rosidl_typesupport_introspection_c.c
lesson4/ros2_comm_demo/src/ros2_comm_demo/install/robot_interfaces/local/lib/python3.10/dist-packages/robot_interfaces/action/: _navigation.py  _navigation_s.c
lesson4/ros2_comm_demo/src/ros2_comm_demo/install/robot_interfaces/local/lib/python3.10/dist-packages/robot_interfaces/srv/: __init__.py  _get_robot_status.py  _get_robot_status_s.c
lesson4/ros2_comm_demo/src/ros2_comm_demo/install/robot_interfaces/share/robot_interfaces/: local_setup.sh  package.sh  package.xml
lesson4/ros2_comm_demo/src/ros2_comm_demo/install/robot_interfaces/share/robot_interfaces/action/: Navigation.action  Navigation.idl
lesson4/ros2_comm_demo/src/ros2_comm_demo/install/robot_interfaces/share/robot_interfaces/cmake/: rosidl_cmake-extras.cmake
lesson4/ros2_comm_demo/src/ros2_comm_demo/install/robot_interfaces/share/robot_interfaces/srv/: GetRobotStatus.idl  GetRobotStatus.srv  GetRobotStatus_Response.msg
lesson4/ros2_comm_demo/src/ros2_comm_demo/install/ros2_comm_demo/share/ros2_comm_demo/: package.sh  package.zsh
lesson4/ros2_comm_demo/src/ros2_comm_demo/install/ros2_comm_demo/share/ros2_comm_demo/cmake/: ros2_comm_demoConfig.cmake
lesson4/ros2_comm_demo/src/ros2_comm_demo/launch/: launch.py
lesson4/ros2_comm_demo/src/ros2_comm_demo/src/: battery_node.cpp  command_node.cpp  pose_node.cpp  task_manager_node.cpp
lesson5_composition/: CMakeLists.txt  package.xml
lesson5_composition/include/lesson5_composition/: listener.hpp  talker.hpp
lesson5_composition/src/: intra_process_pubsub.cpp  listener.cpp  talker.cpp
log/: latest_build
src/lesson9/: README.md
src/lesson9/mtc_week3_demo/: CMakeLists.txt  package.xml
src/lesson9/mtc_week3_demo/launch/: desktop_pick_place.launch.py
src/lesson9/mtc_week3_demo/src/: desktop_pick_place.cpp  tutorial.cpp
(+58 files in other folders)
